# Pegasus

./: .gitignore  Cargo.toml  bundle-release.sh
misc/: com.black-dragon74.Pegasus.plist  install.sh
src/: main.rs  utils.rs
