[package]
name = "pegasus"
version = "0.1.0"
authors = ["black.dragon74 <nickk.2974@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For serializing/deserializing data structures
serde = { version = "1.0.105", features = ["derive"] }

# JSON is what we will be using as our payload's data type
serde_json = "1.0.50"

# For making network requests
reqwest = { version = "0.10.4", features = ["blocking"] }

# Date time support
chrono = "0.4.11"
